--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -116,6 +116,7 @@ h1 {
 
 .c-third__title {
   margin: 0 0 10px 0;
+  font-size: 24px;
 }
 
 .c-third {
@@ -128,17 +129,6 @@ h1 {
   transition: all 0.4s ease-in-out;
   padding: 2em 2em 3em 2em;
   font-size: 18px;
-}
-
-.c-tile {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 0;
-  height: 1000px;
 }
 
 .c-third2 {
@@ -247,6 +237,10 @@ h1 {
     margin: 20px 0;
     padding: 2em 0 2em 2em;
     font-size: 12px;
+  }
+
+  .c-third__title {
+    font-size: 16px;
   }
 
   /* Golfers */
