added golfer profiles

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -152,13 +152,17 @@ h1 {
 .c-golfer {
   background: #191919;
   width: 40%;
-  margin: 40px auto;
+  margin: 60px auto;
   border-radius: 20px;
   position: relative;
   display: block;
   transition: all 0.4s ease-in-out;
   padding: 3em 6em;
   font-size: 18px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .c-golfer__name {
@@ -166,14 +170,37 @@ h1 {
 }
 
 .c-golfer__img > img {
+  display: block;
   object-fit: cover;
-  width: 100%;
-  max-height: 100%;
+  width: 60%;
+  max-height: 40%;
   border-radius: 3%;
+  margin: 10px auto;
+}
+
+.c-golfer__nickname {
+  font-size: 48px;
+  text-align: center;
+  border-bottom: solid white 1px;
+  margin: 0 14%;
+}
+
+.c-golfer__ratings {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  margin: 0 18%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .c-golfer__rating {
-  margin: 10px 0;
+  margin: 4px 0;
+}
+
+.c-golfer__blurb {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 24px;
 }
 
 .checked {
@@ -252,13 +279,31 @@ h1 {
   .c-golfer {
     width: calc(90% - 4em);
     height: auto;
-    margin: 20px auto;
+    margin: 40px auto;
     padding: 2em;
     font-size: 12px;
   }
 
-  .c-golfer__name {
+  .c-golfer__name,
+  .c-golfer__nickname {
     font-size: 32px;
+  }
+
+  .c-golfer__nickname {
+    margin: 0 4%;
+  }
+
+  .c-golfer__ratings {
+    margin-left: 4%;
+    width: 92%;
+  }
+
+  .c-golfer__rating {
+    margin: 2px 0;
+  }
+
+  .c-golfer__blurb {
+    font-size: 16px;
   }
 }
 
