--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -239,6 +239,29 @@ h1 {
   border-style: solid;
   border-color: #111 transparent transparent transparent;
 }
+
+.c-teams {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  margin: 30px auto;
+  width: 72%;
+}
+
+.c-team {
+  background: #191919;
+  display: block;
+  padding: 2em 2em 3em 2em;
+  width: 300px;
+  border-radius: 20px;
+  margin: 30px 0;
+  font-size: 24px;
+}
+
+.c-team__title {
+  font-size: 32px;
+}
+
 /* Mobile Formatting */
 @media (max-width: 768px) {
   .o-flex {
@@ -336,6 +359,24 @@ h1 {
 
   .c-golfer__blurb {
     font-size: 16px;
+  }
+
+  /* Teams */
+  .c-teams {
+    width: 90%;
+    grid-template-columns: 1fr;
+  }
+
+  .c-team {
+    max-width: calc(90%-2em);
+    height: auto;
+    margin: 20px 0;
+    padding: 2em 0 2em 2em;
+    font-size: 12px;
+  }
+
+  .c-team__title {
+    font-size: 24px;
   }
 }
 
